--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-awesome-swiper": "^3.1.0",
     "vue-router": "^3.0.1",
     "vux": "^2.7.4"
   },
